--- a/Paper/Paper/Properties/Resources.resx
+++ b/Paper/Paper/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Circle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Grid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Data\Grid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Icon_CuttingZoneH" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Data\Icon\Icon_CuttingZoneH.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
