--- a/Paper/Paper/Properties/Resources.resx
+++ b/Paper/Paper/Properties/Resources.resx
@@ -124,6 +124,12 @@
   <data name="Grid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Data\Grid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="GridH" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Data\GridH.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GridV" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Data\GridV.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Icon_CuttingZoneH" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Data\Icon\Icon_CuttingZoneH.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
