--- a/Paper/Paper/Properties/Resources.resx
+++ b/Paper/Paper/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="Icon_Grid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Data\Icon\Icon_Grid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="COLLADA_Exporter_Template_Papier2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\data\collada_exporter_template_papier2.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
